--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cyber-Frek</title>
     <style>
         body{
             background-color: lightgray;
@@ -72,7 +72,7 @@
     <h1 class="h1">Welcome to ACCTRO-8 testing Website</h1>
     <hr class="hr1">
     <h4 class="h41">This is our first hosting Website next time we promise this Website will be better than.</h4>
-    <h4 class="h42">We are still updating is you have got error please context to surppot.</h4>
+    <h4 class="h42">We are still updating is you have got error please Contact to surppot.</h4>
     <p>We are the white hat Hacker team. We working for someone who has been hacked from black hat Hacker, and we keep recover social media account of them that has been hacked .</p>
     <p>យើងជាក្រុម Hacker មួកស យើងធ្វើការឱ្យនរណាម្នាក់ដែលត្រូវបាន Hack ពីក្រុម Hacker មួកខ្មៅ ហើយយើងបន្តទាញយកគណនីប្រព័ន្ធផ្សព្វផ្សាយសង្គមដែលត្រូវបានលួចចូល។</p>
 
@@ -91,7 +91,7 @@
 
     <br><br><br><br><br><br><br><br><br><br>
 
-    <p class="p1">រក្សាសិទ្ធគ្របយ៉ាងដោយ ACCTRO-8 .</p>
+    <p class="p1">រក្សាសិទ្ធគ្រប់យ៉ាងដោយ ACCTRO-8 .</p>
     <p class="p1">Sponsor by ABA bank .</p>
     <p class="p1">Origin Cambodia .</p>
     <p class="p1">Develop by Frek-Benjamin .</p>
@@ -99,5 +99,6 @@
     <p class="p1">This website still develop so there is nothing every thing that you need to practice for .</p>
     <button class="connectspp"><a class="color1" href="https://t.me/msl315">Connect Surppot .</a></button>
     <button class="connectus"><a class="color1" href="https://t.me/+-t8fhvX1lrZlYjJl">Connect us .</a></button>
+    <hr>
 </body>
 </html>
